# sharrow

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  api.html  genindex.html  index.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.exercises/: README.md
.exercises/mtc/: run_mtc.sh
.exercises/sandag/: run_sandag.sh
.github/workflows/: docs.yml  run-tests.yml
_modules/: index.html
_modules/sharrow/: dataset.html  flows.html  relationships.html
_sources/: api.rst  intro.md
_sources/walkthrough/: encoding.ipynb  one-dim.ipynb  sparse.ipynb  two-dim.ipynb
_static/: sharrow-docs.css
docs/: _config.yml  _toc.yml  api.rst  index.md  intro.md  requirements.txt  walkthrough.ipynb
docs/_script/: hide_test_cells.py  run_all.py  update_version_number.py
docs/_static/: sharrow-docs.css
docs/walkthrough/: encoding.ipynb  index.md  one-dim.ipynb  sparse.ipynb  two-dim.ipynb
envs/: development.yml  testing.yml
sharrow/: __init__.py  _infer_version.py  _nested_logit_tree.py  accessors.py  aster.py  categorical.py  dataset.py  datastore.py  debug.py  digital_encoding.py  example_data.py  filewrite.py  flows.py  logging.py  maths.py  nested_logit.py  omx.py  relationships.py  selectors.py  shared_memory.py  sparse.py  table.py  translate.py  tree_branch.py  viz.py  wrappers.py
sharrow/_nested_logit_tree/: __init__.py
sharrow/example_data/: maz_to_maz_walk.csv  maz_to_taz.csv
sharrow/example_data/skims.zarr/DISTBIKE/: 0.0
sharrow/example_data/skims.zarr/DISTWALK/: .zarray  .zattrs
sharrow/example_data/skims.zarr/DRV_COM_WLK_BOARDS/: 0.0.0
sharrow/example_data/skims.zarr/DRV_COM_WLK_DDIST/: 0.0.0
sharrow/example_data/skims.zarr/DRV_COM_WLK_DTIM/: 0.0.0
sharrow/example_data/skims.zarr/DRV_COM_WLK_FAR/: 0.0.0
sharrow/example_data/skims.zarr/DRV_COM_WLK_IWAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_COM_WLK_KEYIVT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_COM_WLK_TOTIVT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_COM_WLK_WAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_COM_WLK_WAUX/: 0.0.0
sharrow/example_data/skims.zarr/DRV_COM_WLK_XWAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_EXP_WLK_BOARDS/: 0.0.0
sharrow/example_data/skims.zarr/DRV_EXP_WLK_DTIM/: 0.0.0
sharrow/example_data/skims.zarr/DRV_EXP_WLK_FAR/: 0.0.0
sharrow/example_data/skims.zarr/DRV_EXP_WLK_IWAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_EXP_WLK_KEYIVT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_EXP_WLK_TOTIVT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_EXP_WLK_WAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_EXP_WLK_WAUX/: 0.0.0
sharrow/example_data/skims.zarr/DRV_EXP_WLK_XWAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_HVY_WLK_BOARDS/: 0.0.0
sharrow/example_data/skims.zarr/DRV_HVY_WLK_DDIST/: .zattrs  0.0.0
sharrow/example_data/skims.zarr/DRV_HVY_WLK_DTIM/: 0.0.0
sharrow/example_data/skims.zarr/DRV_HVY_WLK_FAR/: 0.0.0
sharrow/example_data/skims.zarr/DRV_HVY_WLK_IWAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_HVY_WLK_KEYIVT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_HVY_WLK_TOTIVT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_HVY_WLK_WAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_HVY_WLK_WAUX/: 0.0.0
sharrow/example_data/skims.zarr/DRV_HVY_WLK_XWAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LOC_WLK_BOARDS/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LOC_WLK_DDIST/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LOC_WLK_DTIM/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LOC_WLK_FAR/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LOC_WLK_IWAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LOC_WLK_TOTIVT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LOC_WLK_WAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LOC_WLK_XWAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LRF_WLK_BOARDS/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LRF_WLK_DDIST/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LRF_WLK_FAR/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LRF_WLK_IWAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LRF_WLK_KEYIVT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LRF_WLK_TOTIVT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LRF_WLK_WAIT/: 0.0.0
sharrow/example_data/skims.zarr/DRV_LRF_WLK_XWAIT/: 0.0.0
sharrow/example_data/skims.zarr/HOV3_DIST/: 0.0.0
sharrow/example_data/skims.zarr/HOV3_TIME/: 0.0.0
sharrow/example_data/skims.zarr/SOVTOLL_BTOLL/: 0.0.0
sharrow/example_data/skims.zarr/SOV_DIST/: .zattrs
sharrow/example_data/skims.zarr/WLK_COM_DRV_BOARDS/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_DRV_DDIST/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_DRV_DTIM/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_DRV_FAR/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_DRV_IWAIT/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_DRV_KEYIVT/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_DRV_TOTIVT/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_DRV_WAIT/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_DRV_WAUX/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_DRV_XWAIT/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_WLK_BOARDS/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_WLK_FAR/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_WLK_IWAIT/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_WLK_TOTIVT/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_WLK_WAIT/: 0.0.0
sharrow/example_data/skims.zarr/WLK_COM_WLK_WAUX/: 0.0.0
sharrow/tests/: conftest.py  test_categorical.py  test_datasets.py  test_datastore.py  test_example_data.py  test_nesting.py  test_relationships.py  test_sparse.py
sharrow/tests/test_relationships/: test_dict_encoded.csv  test_eval_2d_root.csv  test_get.csv  test_isin.csv  test_isin_and_between.csv  test_joint_dict_encoded.csv  test_mixed_dtypes.csv  test_nested_where.csv  test_shared_data.csv  test_shared_data_2.csv  test_shared_data_reversible.csv  test_tuple_slice.csv  test_with_2d_base.csv
sharrow/utils/: tar_zst.py
walkthrough/: encoding.html  index.html  one-dim.html  sparse.html  two-dim.html
(+81 files in other folders)
