[build-system]
requires = [
    "setuptools>=69",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "sharrow"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "numpy >= 1.19",
    "pandas >= 1.2",
    "pyarrow",
    "xarray",
    "numba >= 0.51.2",
    "numexpr",
    "filelock",
    "dask",
    "networkx",
]

[tool.setuptools_scm]
fallback_version = "1999"
write_to = "sharrow/_version.py"

[tool.ruff]
# Enable flake8-bugbear (`B`) and pyupgrade ('UP') rules.
select = [    "F", # Pyflakes
    "E", # Pycodestyle Errors
    "W", # Pycodestyle Warnings
    "I", # isort
    "UP", # pyupgrade
    "D", # pydocstyle
    "B", # flake8-bugbear
]
fix = true
ignore-init-module-imports = true
line-length = 88
ignore = ["B905", "D1"]
target-version = "py39"

[tool.ruff.lint.isort]
known-first-party = ["larch"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --nbmake --disable-warnings"
testpaths = [
    "sharrow/tests",
    "docs",
]
