[metadata]
name = sharrow
author = Cambridge Systematics
author_email = jeffnewman@camsys.com
license = BSD-3-Clause
url = https://github.com/camsys/sharrow

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy >= 1.19
    pandas >= 1.2
    pyarrow >= 3.0.0
    xarray >= 0.20.0
    numba >= 0.53
    numexpr
    filelock
    dask

[flake8]
exclude =
    .git,
    __pycache__,
    docs/_build,
    sharrow/__init__.py
max-line-length = 160
extend-ignore = E203
